[package]
name = "radiant"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5"
indicatif = {version = "0.16.2", features = ["rayon"]}
num_cpus = "1.4.0"
clap = { version = "4.4.7", features = ["derive"] }

[profile.release]
debug = true
